Adding some styles to the table.

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -21,12 +21,21 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-li {
-  list-style-type: none; 
+table {
+  color: aliceblue;
+  width: 40%;
+  border-collapse: collapse;
+  text-align: center;
+  border: solid thin;
 }
+
+th, td {
+  border-style: none solid; 
+  border: solid thin;
+}
+tr:hover {background-color: #1f2229;}
 
 .App-link {
   color: #61dafb;
